:bug: fix(tera): homepage layout bugs

--- a/apps/tera.com-vue/src/style.scss
+++ b/apps/tera.com-vue/src/style.scss
@@ -1,4 +1,3 @@
-
 body,
 .application {
   font-family: 'OpenSans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -6,18 +5,17 @@ body,
 }
 
 .cognition {
-  background: #736fff!important;
+  background: #736fff !important;
 }
 .communication {
-  background: #0f4d7b!important;
+  background: #0f4d7b !important;
 }
 .speech {
-  background: #17d6bc!important;
+  background: #17d6bc !important;
 }
 .learning {
-  background: #122544!important;
+  background: #122544 !important;
 }
-
 
 .swiper-container {
   /*height: 205px;*/
@@ -46,3 +44,14 @@ body {
   //   height:auto;
   // }*/
 }
+
+.articulation-item:after {
+  content: ' ';
+  position: absolute;
+  border-top: 42px solid #fff;
+  top: 0;
+  left: 0;
+  right: auto;
+  border-right: 42px solid transparent;
+}
+
